--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.1
+Date: 10/04/2019
+  Bugfixes:
+    - When renaming a saved teleport location, the new name was showing as an old name.
+---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 31/03/2019
   Changes:
