resolved compatibility issue with Factorio 0.17.35 ("player" renamed to "character")

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.2
+Date: 03/05/2019
+  Bugfixes:
+    - Resolved compatibility issues with Factorio 0.17.35
+---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: 10/04/2019
   Bugfixes:
